--- a/index.html
+++ b/index.html
@@ -531,22 +531,24 @@ async function showSuggestions(query) {
 }
 </script> 
 <script>
-if ('serviceWorker' in navigator) {
-    window.addEventListener('load', () => {
-        navigator.serviceWorker.register('sw/service-worker.js')
+    if ('serviceWorker' in navigator) {
+        window.addEventListener('load', () => {
+            navigator.serviceWorker.register('/service-worker.js')
             .then((registration) => {
-                console.log('Service Worker registered with scope:', registration.scope);
+                console.log('Service Worker enregistré avec succès :', registration);
             })
             .catch((error) => {
-                console.error('Service Worker registration failed:', error);
+                console.error('Échec de l\'enregistrement du Service Worker :', error);
             });
-    });
-}
+        });
+    }
 </script>
 
 
-</script> 
+ 
 <!-- Load Local JS -->
+<script src="https://unpkg.com/workbox-sw@latest"></script>
+
 <script src="sw/service-worker.js"></script>
 <script src="js/jquery-3.3.1.min.js"></script>
 <script src="js/jquery.easing.min.js"></script>
