--- a/404.html
+++ b/404.html
@@ -12,24 +12,20 @@
     <!-- Favicon -->
   <link rel="icon" type="image/png" href="img/favicon/favicon.png">
 
-    <!-- Manifest -->
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <meta name="apple-mobile-web-app-title" content="Crimson">
-    <link rel="manifest" href="pwa/manifest.json">
 
-    <!-- LOAD LOCAL CSS -->
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/megamenu.css">
-    <link rel="stylesheet" href="css/style-three.css" id="theme">
-    <link rel="stylesheet" href="css/ionicons.css">
-    <link rel="stylesheet" href="css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/responsive.css">
-    <link rel="stylesheet" href="css/splide.min.css">
-    <link rel="stylesheet" href="css/player-crimson.css">
-    <link rel="stylesheet" href="css/jquery-eu-cookie-law-popup.css">
-    <link rel="stylesheet" href="css/owl.carousel.min.css">
-    <link rel="stylesheet" href="css/search.css">
+
+   <!-- LOAD LOCAL CSS -->
+  <link rel="stylesheet" href="../css/bootstrap.min.css">
+  <link rel="stylesheet" href="../css/megamenu.css">
+  <link rel="stylesheet" href="../css/style-three.css" id="theme">
+  <link rel="stylesheet" href="../css/ionicons.css">
+  <link rel="stylesheet" href="../css/font-awesome.min.css">
+  <link rel="stylesheet" href="../css/responsive.css">
+  <link rel="stylesheet" href="../css/splide.min.css">
+  <link rel="stylesheet" href="../css/player-crimson.css">
+  <link rel="stylesheet" href="../css/jquery-eu-cookie-law-popup.css">
+  <link rel="stylesheet" href="../css/search.css">
+  <link rel="stylesheet" href="../css/search.css">
 
     <!-- SweetAlert2 -->
 	<script src="js/sweetalert2@11.js"></script>
@@ -178,18 +174,16 @@ async function showSuggestions(query) {
     }
 }
 </script>  
-<script src="js/sw.js"></script>
-<script src="js/jquery-3.3.1.min.js"></script>
-<script src="js/jquery.easing.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/owl.carousel.min.js"></script>
-<script src="js/jquery.nice-select.min.js"></script>
-<script src="js/megamenu.js"></script>
-<script src="js/splide.min.js"></script>
-<script src="js/custom-main.js"></script>
-<script src="js/jquery-eu-cookie-law-popup.js"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+       <script src="https://cdn.plyr.io/3.7.8/plyr.polyfilled.js"></script>
+       <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
+       <script src="../js/FWDEVPlayer.js"></script>
+       <script src="../js/bootstrap.min.js"></script>
+       <script src="../js/jquery.nice-select.min.js"></script>  
+       <script src="../js/megamenu.js"></script> 
+       <script src="../js/custom-main.js"></script>
+       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
 
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
 <script>
     // Fonction exécutée lors de l'utilisation du clic droit.
     $(document).bind("contextmenu", function() {
