--- a/404.html
+++ b/404.html
@@ -78,7 +78,7 @@
                 <div class="mod-menu">
                     <div class="row">
                         <div class="col-2">
-                            <a href="index.html" title="logo" class="logo"><img src="img/logo.png" alt="logo" title="logo"></a>
+                            <a href="../index.html" title="logo" class="logo"><img src="../img/logo.png" alt="logo" title="logo"></a>
                         </div>
                         <div class="col-7 nav-order-last nopadding">
                             <div class="main-nav leftnav">
@@ -87,9 +87,9 @@
                                 </ul>
                                 <div id="menu" class="collapse header-menu">
                                     <ul class="nav vfx-item-nav">
-                                        <li><a href="index.html" class="" title="home">Home</a></li>
-                                        <li><a href="films.html" class="Active" title="Films">Films</a></li>
-                                        <li style="border-bottom: 0px solid !important;"><a href="direct.html" class="" title="En direct">En direct</a>
+                                        <li><a href="../index.html" class="" title="home">Home</a></li>
+                                        <li><a href="../films.html" class="Active" title="Films">Films</a></li>
+                                        <li style="border-bottom: 0px solid !important;"><a href="../direct.html" class="" title="En direct">En direct</a>
                                             <ul class="dm-align-2 mega-list"> </ul>
                                     </div>
                                 </div>
@@ -117,12 +117,12 @@
     <div class="section">
         <div class="container">
             <div class="row section-padding error-container">
-                <span><img src="img/404.png"></span>
+                <span><img src="../img/404.png"></span>
                 <div class="error-message">
                     <h1>Page Introuvable</h1>
                     <p>La page que vous recherchez n'est pas disponible ❤️</p>
                 </div>
-                <a href="index.html" class="vfx-item-btn-danger page-note-found text-uppercase">Retour à l'accueil</a>
+                <a href="../index.html" class="vfx-item-btn-danger page-note-found text-uppercase">Retour à l'accueil</a>
             </div>
         </div>
     </div>
