--- a/404.html
+++ b/404.html
@@ -15,6 +15,19 @@
 
 
    <!-- LOAD LOCAL CSS -->
+    
+	<link rel="stylesheet" href="css/bootstrap.min.css">
+	<link rel="stylesheet" href="css/megamenu.css">
+	<link rel="stylesheet" href="css/style-three.css" id="theme">
+	<link rel="stylesheet" href="css/ionicons.css">
+	<link rel="stylesheet" href="css/font-awesome.min.css">
+	<link rel="stylesheet" href="css/responsive.css">
+	<link rel="stylesheet" href="css/splide.min.css">
+	<link rel="stylesheet" href="css/player-crimson.css">
+	<link rel="stylesheet" href="css/jquery-eu-cookie-law-popup.css">
+	<link rel="stylesheet" href="css/owl.carousel.min.css">
+	<link rel="stylesheet" href="css/validatesecurity.css">
+    <link rel="stylesheet" href="css/search.css">
   <link rel="stylesheet" href="../css/bootstrap.min.css">
   <link rel="stylesheet" href="../css/megamenu.css">
   <link rel="stylesheet" href="../css/style-three.css" id="theme">
@@ -183,6 +196,17 @@ async function showSuggestions(query) {
        <script src="../js/megamenu.js"></script> 
        <script src="../js/custom-main.js"></script>
        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
+       <script src="js/jquery-3.3.1.min.js"></script>
+<script src="js/jquery.easing.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
+<script src="js/owl.carousel.min.js"></script>
+<script src="js/jquery.nice-select.min.js"></script>
+<script src="js/megamenu.js"></script>
+<script src="js/splide.min.js"></script>
+<script src="js/custom-main.js"></script>
+<script src="js/jquery-eu-cookie-law-popup.js"></script>
+
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
 
 <script>
     // Fonction exécutée lors de l'utilisation du clic droit.
