--- a/direct/Dora-L'exploratrice.html
+++ b/direct/Dora-L'exploratrice.html
@@ -145,7 +145,7 @@
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 mt-4 mb-5">
                     <!-- Player -->
                     <video id="player" playsinline controls preload="auto" poster="../img/direct/Dora-L'exploratrice.banner.jpg">
-                        <source id="video-source" src="https://xilam-animation-1-fr.samsung.wurl.tv/playlist.m3u8 " type="application/x-mpegURL">
+                        <source id="video-source" src="http://cfd-v4-service-channel-stitcher-use1-1.prd.pluto.tv/stitch/hls/channel/5f8ecb9524419b0007365a1c/master.m3u8?appName=web&appVersion=unknown&clientTime=0&deviceDNT=0&deviceId=8e050350-1f2c-11ef-86d8-5d587df108c6&deviceMake=Chrome&deviceModel=web&deviceType=web&deviceVersion=unknown&includeExtendedEvents=false&serverSideAds=false&sid=c938e920-2111-4877-9e36-97d7a0a0d005" type="application/x-mpegURL">
                         <track kind="subtitles" label="Français" srclang="fr" src="sous-titres/subtitles.vtt" default>
                         Votre navigateur ne prend pas en charge la balise vidéo.
                     </video>
