--- a/direct/south-park.html
+++ b/direct/south-park.html
@@ -12,12 +12,7 @@
   <!-- Favicon -->
 	<link rel="icon" type="image/png" href="../img/favicon/favicon.png">
    
-    <!-- manifest -->
-   <meta name="apple-mobile-web-app-capable" content="yes">
-   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-   <meta name="apple-mobile-web-app-title" content="Crimson">
-   <meta name="viewport" content="width=device-width, initial-scale=1">
-   <link rel="manifest" href="../pwa/manifest.json">
+<!-- son pwa -->
   
   
     <!-- LOAD LOCAL CSS -->
