--- a/direct.html
+++ b/direct.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Crimson">
     <title> Direct | Crimson LE site de streaming</title>
-    <meta name="description" content="Crimson | Regarder Nowhere en streaming gratuitement et sans publicité ni inscription avec Crimson ! Profitez de votre film Nowhere comme au cinéma grâce à Crimson !" />
-    <link rel="canonical" href="#/watch/nowhere/108">
+    <meta name="description" content="Crimson | Regarder des programmes en direct en streaming gratuitement et sans publicité ni inscription avec Crimson ! Profitez de votre film Nowhere comme au cinéma grâce à Crimson !" />
+    <link rel="canonical" href="direct.html">
   
     <!-- Favicon -->
   <link rel="icon" type="image/png" href="img/favicon/favicon.png">
